--- a/app/src/main/res/layout/activity_log_in_splash.xml
+++ b/app/src/main/res/layout/activity_log_in_splash.xml
@@ -6,7 +6,7 @@
     android:id="@+id/cc1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogInActivity"
+    tools:context=".activities.LogInActivity"
     android:background="@drawable/background">
 
     <android.support.v7.widget.AppCompatImageView
@@ -94,4 +94,18 @@
         app:layout_constraintTop_toBottomOf="@+id/member_icon_holder"
         app:layout_constraintVertical_bias="0.0" />
 
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/reg"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/reg_guide"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
