--- a/app/src/main/res/layout/activity_log_in_src_member.xml
+++ b/app/src/main/res/layout/activity_log_in_src_member.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".LogInActivity">
+    tools:context=".activities.LogInActivity">
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/student_dis"
@@ -141,4 +141,18 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
         app:layout_constraintVertical_bias="0.12" />
 
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/reg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/reg_guide"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
