--- a/app/src/main/res/layout/activity_log_in_user_cred.xml
+++ b/app/src/main/res/layout/activity_log_in_user_cred.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogInActivity"
+    tools:context=".activities.LogInActivity"
     android:background="@drawable/background">
 
 
