--- a/app/src/main/res/layout/activity_log_in_src_member.xml
+++ b/app/src/main/res/layout/activity_log_in_src_member.xml
@@ -24,7 +24,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/appCompatImageView"
+        android:id="@+id/appCompatImageView2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -42,12 +42,12 @@
         android:textColor="@android:color/black"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView2"
-        app:layout_constraintStart_toStartOf="@+id/appCompatImageView2"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />
+        app:layout_constraintEnd_toEndOf="@+id/member_icon_holder"
+        app:layout_constraintStart_toStartOf="@+id/member_icon_holder"
+        app:layout_constraintTop_toBottomOf="@+id/member_icon_holder" />
 
     <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/appCompatImageView2"
+        android:id="@+id/member_icon_holder"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
@@ -64,10 +64,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.249" />
 
-
-
     <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/member_icon_holder"
+        android:id="@+id/appCompatImageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
@@ -75,7 +73,7 @@
         android:layout_marginEnd="16dp"
         android:scaleType="centerInside"
         android:src="@drawable/user_icon"
-        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
+        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView2"
         app:layout_constraintTop_toBottomOf="@+id/login_d" />
 
     <android.support.v7.widget.AppCompatTextView
@@ -86,9 +84,9 @@
         android:layout_marginTop="12dp"
         android:text="@string/src_member"
         android:textColor="@android:color/black"
-        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView2"
-        app:layout_constraintStart_toStartOf="@+id/appCompatImageView2"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />
+        app:layout_constraintEnd_toEndOf="@+id/member_icon_holder"
+        app:layout_constraintStart_toStartOf="@+id/member_icon_holder"
+        app:layout_constraintTop_toBottomOf="@+id/member_icon_holder" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
@@ -141,18 +139,5 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
         app:layout_constraintVertical_bias="0.12" />
 
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/reg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/reg_guide"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
