--- a/app/src/main/res/layout/fragment_student_home.xml
+++ b/app/src/main/res/layout/fragment_student_home.xml
@@ -4,6 +4,4 @@
     android:id="@+id/home_page_items_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-</LinearLayout>
+    android:orientation="vertical"/>
