--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFF0E3</color>
+    <color name="colorPrimary">#F7AC73</color>
     <color name="colorPrimaryDark">#EBA269</color>
     <color name="colorAccent">#000000</color>
     <color name="log_in_stroke_color">#806E5F</color>
