--- a/app/src/main/res/layout/src_member_content.xml
+++ b/app/src/main/res/layout/src_member_content.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activities.student.StudentActivity">
+    tools:context=".activities.StudentActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
