--- a/app/src/main/res/layout/fragment_src_activities.xml
+++ b/app/src/main/res/layout/fragment_src_activities.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/src_activities_swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
