--- a/app/src/main/res/layout/bottom_sheet_src_post_activity.xml
+++ b/app/src/main/res/layout/bottom_sheet_src_post_activity.xml
@@ -26,13 +26,15 @@
             android:layout_height="match_parent">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/src_activity_input"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/activity"/>
         </android.support.design.widget.TextInputLayout>
+
     </android.support.v4.widget.NestedScrollView>
 
-    <Button
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/src_post_activity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
