replaced src post activity bottom sheet with an activity

--- a/app/src/main/res/menu/src_nav_menu.xml
+++ b/app/src/main/res/menu/src_nav_menu.xml
@@ -7,9 +7,14 @@
         <item
             android:id="@+id/src_nav_home"
             android:title="@string/home"/>
+
         <item
             android:id="@+id/src_nav_activity_timeline"
             android:title="@string/src_activity_time_line"/>
+
+        <item
+            android:id="@+id/src_nav_polls"
+            android:title="@string/src_polls"/>
     </group>
 
     <item
