--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -10,7 +10,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/student_content"
+        layout="@layout/content_student"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
