created fragment for students to view src activities

--- a/app/src/main/res/menu/src_nav_menu.xml
+++ b/app/src/main/res/menu/src_nav_menu.xml
@@ -5,20 +5,20 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/src_nav_home"
+            android:id="@+id/nav_home"
             android:title="@string/home"/>
 
         <item
-            android:id="@+id/src_nav_activity_timeline"
+            android:id="@+id/nav_activity_timeline"
             android:title="@string/src_activity_time_line"/>
 
         <item
-            android:id="@+id/src_nav_polls"
+            android:id="@+id/nav_polls"
             android:title="@string/src_polls"/>
     </group>
 
     <item
-        android:id="@+id/src_nav_log_out"
+        android:id="@+id/nav_log_out"
         android:title="@string/log_out"/>
 
 </menu>
