--- a/app/src/main/res/layout/fragment_student_view_src_activities.xml
+++ b/app/src/main/res/layout/fragment_student_view_src_activities.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/pullToRefreshSrcActivitiesStudent"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
