--- a/app/src/main/res/layout/item_src_activity_card.xml
+++ b/app/src/main/res/layout/item_src_activity_card.xml
@@ -57,8 +57,8 @@
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/appCompatImageView4"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/icon_like_unpressed"
@@ -71,6 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="0  "
+            android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView4"
             app:layout_constraintStart_toEndOf="@+id/appCompatImageView4"
@@ -78,8 +79,8 @@
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/appCompatImageView5"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_marginStart="48dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/icon_dis_like_unpressed"
@@ -92,6 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="0  "
+            android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView5"
             app:layout_constraintStart_toEndOf="@+id/appCompatImageView5"
@@ -100,8 +102,8 @@
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/appCompatImageView6"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_marginStart="48dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/icon_comment"
@@ -114,6 +116,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="0  "
+            android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView6"
             app:layout_constraintStart_toEndOf="@+id/appCompatImageView6"
