--- a/app/src/main/res/layout/item_src_activity_card.xml
+++ b/app/src/main/res/layout/item_src_activity_card.xml
@@ -242,6 +242,7 @@
                     android:layout_weight="1">
 
                     <android.support.design.widget.TextInputEditText
+                        android:id="@+id/input_comment"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/comment"
@@ -249,6 +250,7 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.v7.widget.AppCompatImageButton
+                    android:id="@+id/send_comment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/icon_send"
