--- a/app/src/main/res/layout/item_src_activity_card.xml
+++ b/app/src/main/res/layout/item_src_activity_card.xml
@@ -217,6 +217,7 @@
             </LinearLayout>
 
             <android.support.v7.widget.SwitchCompat
+                android:id="@+id/anonymity_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
