fixed tiny bugs that occur during code updates

--- a/app/src/main/res/layout/item_src_activity_card.xml
+++ b/app/src/main/res/layout/item_src_activity_card.xml
@@ -275,6 +275,7 @@
             app:layout_constraintTop_toBottomOf="@+id/student_sec" />
 
         <android.support.v7.widget.AppCompatButton
+            android:id="@+id/view_comments"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
