--- a/app/src/main/res/layout/bottom_sheet_view_comments.xml
+++ b/app/src/main/res/layout/bottom_sheet_view_comments.xml
@@ -6,16 +6,19 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/comment_view_activity_title"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:background="@color/colorPrimaryDark"
         android:text="@string/view_comments"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/white"
+        android:padding="10dp"/>
 
     <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/comment_view_activity_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
