--- a/app/src/main/res/layout/bottom_sheet_view_comments.xml
+++ b/app/src/main/res/layout/bottom_sheet_view_comments.xml
@@ -50,6 +50,19 @@
         android:src="@drawable/dotted_line"
         android:layerType="software"/>
 
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/anonymity_switch_vc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layoutDirection="rtl"
+        android:text="@string/student_anonymity"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"/>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
