--- a/app/src/main/res/layout/item_comment_view_card.xml
+++ b/app/src/main/res/layout/item_comment_view_card.xml
@@ -12,7 +12,7 @@
         android:layout_margin="5dp">
 
         <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/appCompatTextView"
+            android:id="@+id/comment_owner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -24,7 +24,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/appCompatTextView2"
+            android:id="@+id/comment_view_date_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -32,9 +32,10 @@
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/comment_owner" />
 
         <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/comment_view"
             android:layout_width="wrap_content"
             android:layout_height="19dp"
             android:layout_marginStart="8dp"
@@ -45,7 +46,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
+            app:layout_constraintTop_toBottomOf="@+id/comment_view_date_time"
             app:layout_constraintVertical_bias="1.0" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
