--- a/app/src/main/res/layout/item_comment_view_card.xml
+++ b/app/src/main/res/layout/item_comment_view_card.xml
@@ -37,6 +37,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
