--- a/app/src/main/res/layout/activity_post_poll.xml
+++ b/app/src/main/res/layout/activity_post_poll.xml
@@ -70,7 +70,19 @@
                     android:layout_margin="5dp"/>
             </RadioGroup>
 
+            <android.support.v7.widget.AppCompatButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:drawableStart="@drawable/icon_add_circle"
+                android:text="@string/add_option"
+                android:textAllCaps="false"
+                android:background="@android:color/transparent"/>
 
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></LinearLayout>
         </LinearLayout>
 
 
