--- a/app/src/main/res/layout/activity_post_poll.xml
+++ b/app/src/main/res/layout/activity_post_poll.xml
@@ -80,7 +80,7 @@
                 android:background="@android:color/transparent"/>
 
             <LinearLayout
-
+                android:id="@+id/options_holder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></LinearLayout>
         </LinearLayout>
