added orientation to the options holder linear layout

--- a/app/src/main/res/layout/activity_post_poll.xml
+++ b/app/src/main/res/layout/activity_post_poll.xml
@@ -82,7 +82,8 @@
             <LinearLayout
                 android:id="@+id/options_holder"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"></LinearLayout>
+                android:layout_height="wrap_content"
+                android:orientation="vertical"></LinearLayout>
         </LinearLayout>
 
 
