--- a/app/src/main/res/layout/activity_post_poll.xml
+++ b/app/src/main/res/layout/activity_post_poll.xml
@@ -83,7 +83,7 @@
                 android:id="@+id/options_holder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"></LinearLayout>
+                android:orientation="vertical"/>
         </LinearLayout>
 
 
