--- a/app/src/main/res/layout/activity_post_poll.xml
+++ b/app/src/main/res/layout/activity_post_poll.xml
@@ -73,6 +73,7 @@
             </RadioGroup>
 
             <android.support.v7.widget.AppCompatButton
+                android:id="@+id/src_add_poll_option"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
