--- a/app/src/main/res/layout/item_option_holder.xml
+++ b/app/src/main/res/layout/item_option_holder.xml
@@ -4,4 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="option"
+        android:textStyle="italic"
+        android:textColor="@android:color/black"/>
 </android.support.v7.widget.CardView>
