--- a/app/src/main/res/layout/item_option_holder.xml
+++ b/app/src/main/res/layout/item_option_holder.xml
@@ -21,6 +21,7 @@
             android:layout_weight="1"/>
 
         <android.support.v7.widget.AppCompatImageButton
+            android:id="@+id/delete_choice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
